--- a/labs/intel/idf-pod18.yaml
+++ b/labs/intel/idf-pod18.yaml
@@ -8,7 +8,7 @@
 ---
 idf:
   version: 0.1
-  installer: ['joid']
+  installer: ['joid', 'fuel']
   net_config:
     # NOTE: Network names are likely to change after the PDF spec is updated
     oob:
@@ -25,12 +25,12 @@ idf:
       bridge: brAdm
     mgmt:  # data
       interface: 2
-      vlan:
+      vlan: 184
       network: 10.10.182.0
       mask: 24
     storage:  # storage
       interface: 3
-      vlan:
+      vlan: native
       network: 10.10.182.0
       mask: 24
     private:  # floating
@@ -48,3 +48,43 @@ idf:
       dns:
         - 8.8.8.8
         - 8.8.4.4
+  fuel:
+    jumphost:
+      bridges:
+        admin: 'brAdm'
+        mgmt: 'mgmt18_br0'
+        private: ~
+        public: 'brExt'
+    maas:
+      # MaaS timeouts (in minutes)
+      timeout_comissioning: 10
+      timeout_deploying: 15
+    network:
+      ntp_strata_host1: 1.pool.ntp.org
+      ntp_strata_host2: 0.pool.ntp.org
+      node:
+        # Ordered-list, index should be in sync with node index in PDF
+        - interfaces: &interfaces
+            # Ordered-list, index should be in sync with interface index in PDF
+            - 'eno1'
+            - 'eno2'
+            - 'ens785f0'
+            - 'ens785f1'
+            - 'ens785f2'
+            - 'ens785f3'
+          busaddr: &busaddr
+            # Bus-info reported by `ethtool -i ethX`
+            - '0000:03:00.0'
+            - '0000:03:00.3'
+            - '0000:05:00.0'
+            - '0000:05:00.1'
+            - '0000:05:00.2'
+            - '0000:05:00.3'
+        - interfaces: *interfaces
+          busaddr: *busaddr
+        - interfaces: *interfaces
+          busaddr: *busaddr
+        - interfaces: *interfaces
+          busaddr: *busaddr
+        - interfaces: *interfaces
+          busaddr: *busaddr
